; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/dc/extr_bcode.c_readline.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/dc/extr_bcode.c_readline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, %struct.source* }
%struct.source = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i8* (%struct.source*)* }

@bmachine = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @readline to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @readline() #0 {
  %1 = alloca %struct.source*, align 8
  %2 = load %struct.source*, %struct.source** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bmachine, i32 0, i32 1), align 8
  %3 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bmachine, i32 0, i32 0), align 8
  %4 = getelementptr inbounds %struct.source, %struct.source* %2, i64 %3
  store %struct.source* %4, %struct.source** %1, align 8
  %5 = load %struct.source*, %struct.source** %1, align 8
  %6 = getelementptr inbounds %struct.source, %struct.source* %5, i32 0, i32 0
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i8* (%struct.source*)*, i8* (%struct.source*)** %8, align 8
  %10 = load %struct.source*, %struct.source** %1, align 8
  %11 = call i8* %9(%struct.source* %10)
  ret i8* %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
